# build-fix-agents

./: README.md  action.yml  package.json  pyproject.toml
.github/workflows/: auto-fix.yml
benchmarks/: real_world_errors.py  real_world_results.json  results.json  run_benchmarks.py  ts_error_coverage.py  ts_error_coverage_results.json
build_fix/agents/: missing_export.py  unused_import.py
examples/: broken.ts  build-fix-action.yml  help.txt  test-output.txt
src/agents/: __init__.py  duplicate_var.py  unused_import.py  utils.py
src/build_fix/: __init__.py  cli.py  fixer.py
src/build_fix/agents/: __init__.py  base.py  duplicate_var.py  export_spelling.py  implicit_any.py  missing_export.py  missing_return_type.py  unused_import.py
tests/: test_agents.py
