[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build-fix"
version = "0.1.0"
description = "Auto-repair TypeScript/JS build errors: duplicates, missing exports, spelling typos, unused imports."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["typescript", "javascript", "build", "lint", "fix", "vite", "tsc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
build-fix = "build_fix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["build_fix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/ownmy-app/build-fix-agents"
